feat: Upgrade to Spring Boot 3.3.13 - all Spring and related dependencies are upgraded.