@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -66,6 +66,6 @@ public class Option<T> implements Serializable {
     @Override
     public String toString() {
 
-        return String.format("%s: %s", name, value);
+        return "%s: %s".formatted(name, value);
     }
 }
