@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -139,7 +139,7 @@ public class ReferenceModelItem extends AbstractModelItem implements TestSuite,
         } else if (!super.getName().equals(StringUtils.EMPTY)) {
             return super.getName();
         } else {
-            return String.format("Reference to [%s - %s]", templProjName, template.toString());
+            return "Reference to [%s - %s]".formatted(templProjName, template.toString());
         }
     }
 
